--- a/docs/modules/ROOT/pages/usage.adoc
+++ b/docs/modules/ROOT/pages/usage.adoc
@@ -8,8 +8,9 @@ Trino works together with the Apache Hive metastore and S3 bucket.
 * Accessible S3 Bucket
     ** Endpoint, access-key and secret-key
     ** Data in the Bucket (we use the https://archive.ics.uci.edu/ml/datasets/iris[Iris] dataset here)
-* Optional deployed Stackable https://github.com/stackabletech/secret-operator[Secret-Operator] for certificates when deploying for HTTPS
-* Optional for authorization: Deployed Stackable https://github.com/stackabletech/opa-operator[OPA-Operator]
+* Optional deployed Stackable xref:secret-operator::index.adoc[Secret Operator] for certificates when deploying for TLS
+* Optional deployed Stackable xref:commons-operator::index.adoc[Commons Operator] for certificates when deploying for TLS authentication
+* Optional for authorization: Deployed Stackable xref:opa-operator::index.adoc[OPA Operator][OPA-Operator]
 * Optional https://repo.stackable.tech/#browse/browse:packages:trino-cli%2Ftrino-cli-363-executable.jar[Trino CLI] to test SQL queries
 
 == Installation
@@ -22,13 +23,13 @@ Please refer to the S3 provider.
 
 === Hive operator
 
-Please refer to the https://github.com/stackabletech/hive-operator[Hive] operator and https://docs.stackable.tech/hive/index.html[docs].
+Please refer to the xref:hive-operator::index.adoc[Hive Operator] and https://docs.stackable.tech/hive/index.html[docs].
 
 Both Hive and Trino need the same S3 authentication.
 
 === OPA operator
 
-Please refer to the https://github.com/stackabletech/opa-operator[OPA] operator and https://docs.stackable.tech/opa/index.html[docs].
+Please refer to the xref:opa-operator::index.adoc[OPA Operator] and https://docs.stackable.tech/opa/index.html[docs].
 
 === Authentication
 
@@ -146,9 +147,21 @@ To access the CLI please execute:
 ./trino-cli-387-executable.jar --debug --server http://<node>:<http-port> --user=admin
 ----
 
-==== Secure (https) for production:
+==== Secure for production:
 
-Create a secure single node Trino (v387) cluster. This will disable the UI access via http and requires username and password from the secret above. Please adapt the `s3` settings with your credentials (check `examples/simple-trino-cluster-authentication-opa-authorization.yaml` for a full example setting up Hive, OPA, Secrets and Trino):
+There are multiple steps that must be taken to secure a Trino cluster:
+
+1. Enable authentication
+2. Enable TLS between the clients and coordinator
+3. Enable internal TLS for communications between coordinators and workers
+
+For testing purposes we use the https://trino.io/docs/current/installation/cli.html[Trino CLI].
+
+===== Via authentication
+
+If authentication is enabled, https://trino.io/docs/current/security/tls.html[TLS] for the coordinator as well as a shared secret for https://trino.io/docs/current/security/internal-communication.html[internal communications] (this is base64 and not encrypted) must be configured.
+
+Securing the Trino cluster will disable all HTTP ports and disable the web interface on the HTTP port as well.
 
 [source,yaml]
 ----
@@ -158,48 +171,77 @@ metadata:
   name: simple-trino
 spec:
   version: 387-stackable0.1.0
-  hiveConfigMapName: simple-hive-derby
-  opa:
-    configMapName: simple-opa
-    package: trino
-  s3:
-    inline:
-      host: test-minio
-      port: 9000
-      accessStyle: Path
-      credentials:
-        secretClass: minio-credentials
+  config:
+    tls:
+      secretClass: trino-tls
   authentication:
     method:
       multiUser:
         userCredentialsSecret:
-          namespace: default
           name: simple-trino-users-secret
-  coordinators:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config: {}
-  workers:
-    roleGroups:
-      default:
-        selector:
-          matchLabels:
-            kubernetes.io/os: linux
-        replicas: 1
-        config: {}
+[..]
 ----
 
-To access the CLI please download the https://repo1.maven.org/maven2/io/trino/trino-cli/387/trino-cli-387-executable.jar[Trino CLI] and execute:
+If no `config.tls.secretClass` is provided but authentication is enabled, it will default to `tls` provided by the xref:secret-operator::index.adoc[Secret Operator].
+
 [source]
 ----
-./trino-cli-387-executable.jar --debug --server https://<host>:<https-port> --user=admin --password --insecure
+./trino-cli-387-executable.jar --debug --server https://<host>:<https-port> --user=admin  --keystore-path=keystore.p12 --keystore-password=changeit
+----
+or
+
+[source]
+----
+./trino-cli-387-executable.jar --debug --server https://<host>:<https-port> --user=admin --insecure
 ----
 
-If you use self signed certificates, you also need the `--insecure` flag above which can be omitted otherwise.
+===== Via TLS only
+
+This will disable the HTTP port and UI access and encrypt client-server communications.
+
+[source,yaml]
+----
+apiVersion: trino.stackable.tech/v1alpha1
+kind: TrinoCluster
+metadata:
+  name: simple-trino
+spec:
+  version: 387-stackable0.1.0
+  config:
+    tls:
+      secretClass: trino-tls
+[..]
+----
+
+[source]
+----
+./trino-cli-387-executable.jar --debug --server https://<host>:<https-port> --user=admin --keystore-path=keystore.p12 --keystore-password=changeit
+----
+
+===== Via internal TLS
+
+Internal TLS is for encrypted and authenticated communications between coordinators and workers. Since this applies to all the data send and processed between the processes, this may reduce the performance significantly.
+
+[source,yaml]
+----
+apiVersion: trino.stackable.tech/v1alpha1
+kind: TrinoCluster
+metadata:
+  name: simple-trino
+spec:
+  version: 387-stackable0.1.0
+  config:
+    internalTls:
+      secretClass: trino-internal-tls
+[..]
+----
+
+Since Trino has internal and external communications running over a single port, this will enable the HTTPS port but not expose it. Cluster access is only possible via HTTP.
+
+[source]
+----
+./trino-cli-387-executable.jar --debug --server http://<host>:<http-port> --user=admin
+----
 
 ==== S3 connection specification
 
@@ -217,6 +259,11 @@ s3: # <1>
     port: 9000 # <3>
     pathStyleAccess: true # <4>
     secretClass: minio-credentials  # <5>
+    tls:
+      verification:
+        server:
+          caCert:
+            secretClass: minio-tls-certificates #<6>
 ----
 <1> Entry point for the connection configuration
 <2> Connection host
@@ -225,6 +272,32 @@ s3: # <1>
     which means virtual hosted-style URLs are used.
 <5> Name of the `Secret` object expected to contain the following keys:
     `accessKey` and `secretKey`
+<6> Optional TLS settings for encrypted traffic. The `secretClass` can be provided by the Secret Operator or yourself.
+
+A self provided S3 TLS secret can be specified like this:
+[source,yaml]
+----
+apiVersion: secrets.stackable.tech/v1alpha1
+kind: SecretClass
+metadata:
+  name: minio-tls-certificates
+spec:
+  backend:
+    k8sSearch:
+      searchNamespace:
+        pod: {}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: minio-tls-certificates
+  labels:
+    secrets.stackable.tech/class: minio-tls-certificates
+data:
+    ca.crt: <your-base64-encoded-ca>
+    tls.crt: <your base64-encoded-public-key>
+    tls.key: <your-base64-encoded-private-key>
+----
 
 It is also possible to configure the bucket connection details as a separate
 Kubernetes resource and only refer to that object from the Trino specification
