--- a/docs/modules/getting_started/pages/index.adoc
+++ b/docs/modules/getting_started/pages/index.adoc
@@ -1,6 +1,6 @@
 = Getting started
 
-This guide will get you started with Trino using the Stackable Operator. It will guide you through the installation of the Operator and its dependencies and setting up your first Trino cluster.
+This guide will get you started with Trino using the Stackable Operator. It will guide you through the installation of the operator and its dependencies and setting up your first Trino cluster.
 
 == Prerequisites
 
@@ -9,11 +9,11 @@ You will need:
 * a Kubernetes cluster
 * kubectl
 * optional: Helm
-* optional: Trino CLI tool (for testing)
+* optional: Trino CLI tool and curl (for testing)
 
 == What's next
 
-The Guide is divided into two steps:
+The guide is divided into the following steps:
 
 * xref:installation.adoc[Installing the Operators].
-* xref:first_steps.adoc[Setting up the Trino instance].
+* xref:first_steps.adoc[Setting up the Trino cluster].
