adapted defaults and docs

--- a/docs/modules/ROOT/pages/usage.adoc
+++ b/docs/modules/ROOT/pages/usage.adoc
@@ -491,7 +491,7 @@ Here too, overriding properties such as `http-server.https.port` will lead to br
 
 === Storage for data volumes
 
-You can mount volumes where data is stored by specifying https://kubernetes.io/docs/concepts/storage/persistent-volumes[PersistentVolumeClaims] for each individual role or role group:
+You can mount a volume where data (config and logs of Trino) is stored by specifying https://kubernetes.io/docs/concepts/storage/persistent-volumes[PersistentVolumeClaims] for each individual role or role group:
 
 [source,yaml]
 ----
@@ -512,7 +512,7 @@ workers:
 
 In the above example, all Trino workers in the default group will store data (the location of the property `--data-dir`) on a `3Gi` volume. Additional role groups not specifying any resources will inherit the config provided on the role level (`2Gi` volume). This works the same for memory or CPU requests.
 
-By default, in case nothing is configured in the custom resource for a certain role group, each Pod will have a `1Gi` large local volume mount for the data location.
+By default, in case nothing is configured in the custom resource for a certain role group, each Pod will have a `2Gi` large local volume mount for the data location containing mainly logs.
 
 === Memory requests
 
@@ -529,7 +529,7 @@ workers:
             limit: '2Gi'
 ----
 
-In this example, each Trino container in the "default" group will have a maximum of 2 gigabytes of memory. To be more precise, these memory limits apply to the containers running the Trino daemons but not to any sidecar containers that are part of the pod.
+In this example, each Trino container in the `default` group will have a maximum of 2 gigabytes of memory. To be more precise, these memory limits apply to the container running Trino but not to any sidecar containers that are part of the pod.
 
 Setting this property will also automatically set the maximum Java heap size for the corresponding process to 80% of the available memory. Be aware that if the memory constraint is too low, the cluster might fail to start. If pods terminate with an 'OOMKilled' status and the cluster doesn't start, try increasing the memory limit.
 
@@ -563,10 +563,10 @@ workers:
       config:
         resources:
           requests:
-            cpu: 100m
+            cpu: 200m
             memory: 2Gi
           limits:
-            cpu: "1"
+            cpu: "4"
             memory: 2Gi
           storage:
             data:
