TrinoClusters now must specify a catalogLabelSelector

--- a/docs/modules/ROOT/pages/usage.adoc
+++ b/docs/modules/ROOT/pages/usage.adoc
@@ -117,7 +117,8 @@ spec:
   version: 387-stackable0.1.0
   hiveConfigMapName: simple-hive-derby
   catalogLabelSelector:
-    trino: simple-trino
+    matchLabels:
+      trino: simple-trino
   coordinators:
     roleGroups:
       default:
