--- a/docs/modules/ROOT/pages/usage.adoc
+++ b/docs/modules/ROOT/pages/usage.adoc
@@ -115,9 +115,9 @@ metadata:
   name: simple-trino
 spec:
   version: 387-stackable0.1.0
-  hiveConfigMapName: simple-hive-derby
   catalogLabelSelector:
-    trino: simple-trino
+    matchLabels:
+      trino: simple-trino
   coordinators:
     roleGroups:
       default:
