--- a/docs/modules/ROOT/pages/usage.adoc
+++ b/docs/modules/ROOT/pages/usage.adoc
@@ -488,7 +488,7 @@ spec:
 
 The `spec.catalogLabelSelector` is used to fetch the list of `TrinoCatalogs` used for this Trino cluster.
 In this case the `hive` and `iceberg` catalogs will be used as they both match the `catalogLabelSelector`.
-This mechanism allows to create a `TrinoCluster` once and than add new catalogs dynamically by simple creating `TrinoCatalog` objects.
+This mechanism allows to create a `TrinoCluster` once and then add new catalogs dynamically by creating `TrinoCatalog` objects.
 
 == Monitoring
 
